kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-hmis-ingress
  namespace: ai-hmis-namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "${acm_certificate_arn}"
    # the above value YOUR_ACM_CERTIFICATE_ARN need to replace with actual value 
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: devops-phani.fun
      http:
        paths:
          # Backend APIs
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ai-hmis-backend-service
                port:
                  number: 8080

          # Angular Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-hmis-frontend-service
                port:
                  number: 80
